Update calculation result

--- a/notebook/chp01.2-Conda.ipynb
+++ b/notebook/chp01.2-Conda.ipynb
@@ -4,81 +4,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`conda update --help`\n",
+    "## Conda基础命令\n",
+    "``` python\n",
+    "# 检查conda版本\n",
+    "conda --version\n",
     "\n",
+    "# 查看已安装的环境\n",
+    "conda info -e\n",
     "\n",
-    "# 使用conda\n",
+    "# 升级conda\n",
+    "conda update conda\n",
     "\n",
-    "检查conda版本  \n",
+    "# 帮助\n",
+    "conda update --help\n",
+    "```\n",
     "\n",
-    "`conda --version`\n",
+    "## 管理Conda环境\n",
+    "```python\n",
+    "# 管理conda环境\n",
+    "conda env --help\n",
     "\n",
-    "升级conda\n",
+    "# 当前environments 信息 list env\n",
+    "conda info --ENVS\n",
     "\n",
-    "`conda update conda`\n",
+    "# 安装一个名为py35的环境，指定Python版本是3.5（不用管是3.5.x，conda会为我们自动寻找3.4.x中的最新版本）\n",
+    "conda create --name py35 python=3.5\n",
+    "conda create -n py35 python=3.5\n",
     "\n",
+    "# 安装好后，使用activate激活某个环境\n",
+    "activate py35    # for Windows\n",
+    "source activate py35    # for Linux & Mac\n",
     "\n",
-    "# 管理conda environments\n",
+    "# 此时，再次输入\n",
+    "python --version\n",
     "\n",
-    "\tconda env --help\n",
+    "# 如果想返回默认的python 2.7环境，运行\n",
+    "deactivate py35 # for Windows\n",
+    "source deactivate py35 # for Linux & Mac\n",
+    " \n",
+    "# 删除一个已有的环境\n",
+    "conda remove --name py35 --all\n",
+    "```\n",
     "\n",
-    "## create\n",
+    "## Conda的包管理\n",
+    "```python\n",
+    "# 查看已经安装的packages\n",
+    "conda list\n",
     "\n",
-    "\tconda create --name yournames packages-your-want\n",
-    "\tconda create -n yournames packages-your-want\n",
+    "# 在ENV环境下，安装名为PACKAGENAME的包\n",
+    "# (如果不用-n指定环境名称，则被安装在当前活跃环境\n",
+    "#  也可以通过-c指定通过某个channel安装)\n",
+    "conda install -n ENVS PACKAGENAME\n",
+    "pip install boltons\n",
     "\n",
-    "## change env\n",
+    "# 更新名为PACKAGENAME的包\n",
+    "conda update -n ENVS PACKAGENAME\n",
     "\n",
-    "\tsource activate yourname\n",
-    "\tactivate your name\n",
-    "\tsource deactivate \n",
-    "\tdeactivate your\n",
+    "# 删除package\n",
+    "conda remove -n ENVS PACKAGENAME\n",
     "\n",
-    "## set python version\n",
-    "\n",
-    "\tconda create -n yourname python=x.x packages-your-want\n",
-    "\n",
-    "\n",
-    "## 当前environments 信息 list env\n",
-    "\n",
-    "\tconda info --envs\n",
+    "# 搜索包PACKAGENAME\n",
+    "conda search PACKAGENAME\n",
     "\n",
     "## clone env\n",
+    "conda create --clone py35 --name py35-2\n",
+    "```\n",
     "\n",
-    "\tconda create -n name1 --clone name2\n",
+    "## 管理Python \n",
+    "```python\n",
+    "# set python version\n",
+    "conda create -n yourname python=x.x packages-your-want\n",
     "\n",
-    "## remove env\n",
+    "# manage python，当前python 版本  \n",
+    "conda search --full-name python\n",
+    "conda create --name snakes python=3\n",
+    "python --version\n",
+    "```\n",
     "\n",
-    "\tconda remove --name yourname --all\n",
-    "\tconda info --envs\n",
+    "## share env\n",
+    "```python\n",
+    "source activate yourname\n",
+    "activate yourname\n",
+    "conda env export > envrionment.yml\n",
+    "conda env create -f environment.yml\n",
+    "#another way\n",
+    "conda list -e>spec-file.txt\n",
+    "conda create --name myname --file spec-file.txt\n",
+    "```\n",
     "\n",
-    "\n",
-    "\n",
-    "# manage python\n",
-    "\n",
-    "当前python 版本  \n",
-    "    conda search --full-name python\n",
-    "    \n",
-    "    conda create --name snakes python=3\n",
-    "    python --version\n",
-    "    \n",
-    "# Managing packages\n",
-    "\n",
-    "    conda list\n",
-    "    conda search beautifulsoup4\n",
-    "    conda install --name bunnies beautifulsoup4\n",
-    "    pip install see\n",
-    "    conda remove --name bunnies iopro\n",
-    "\n",
-    "# share env\n",
-    "\n",
-    "\tsource activate yourname\n",
-    "\tactivate yourname\n",
-    "\tconda env export > envrionment.yml\n",
-    "\tconda env create -f environment.yml\n",
-    "\t#another way\n",
-    "\tconda list -e>spec-file.txt\n",
-    "\tconda create --name myname --file spec-file.txt"
+    "## 参考资料\n",
+    "- [Conda Cheet Sheet](https://conda.io/docs/_downloads/conda-cheatsheet.pdf)\n",
+    "- [Anaconda使用总结](http://python.jobbole.com/86236/)"
    ]
   },
   {
@@ -94,7 +110,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,9 +124,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
