--- a/notebook/chp01.5-git and github.ipynb
+++ b/notebook/chp01.5-git and github.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> TODO: 理解原理，汇总整理\n",
+    "\n",
     "# git config\n",
     "\n",
     "    git config --global user.name \"Your Name\"\n",
@@ -131,7 +133,10 @@
     "# git push\n",
     "\n",
     "    git push\n",
-    "\n"
+    "\n",
+    "## 参考资料\n",
+    "- [Git教程 - 廖雪峰](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)\n",
+    "- [30分钟git命令入门](http://blog.jobbole.com/102957/)"
    ]
   },
   {
@@ -147,9 +152,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -161,9 +166,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
